# klangstrom-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
emulator/: boards.txt  package.json  platform.txt
emulator/cores/sdl2/: Arduino.h  ArduinoFunctions.cpp  ArduinoFunctions.h  Drawable.h  KlangstromEmulator.cpp  KlangstromEmulator.h  KlangstromEmulatorAudioDevice.h  KlangstromEnvironment.h  PeriodicalTask.h  clock.c  clock.h  function_stubs.c  main.cpp  wiring.h  wiring_time.c  wiring_time.cpp  wiring_time.h
emulator/cores/sdl2/umgebung/: Brewfile.lock.json
emulator/cores/sdl2/umgebung/src/: Umgebung.cpp
emulator/examples/: build.sh  run.sh
emulator/examples/test/: test.ino
